small cosmetic changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Navigation -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="#" class="nav-logo">Rishubh Parihar</a>
+      <a href="#" class="nav-logo"><img src="images/logo-name.svg" alt="Rishubh Parihar" class="logo-image"></a>
       <div class="nav-links">
         <a href="#" class="nav-link active" data-tab="about">About</a>
         <a href="#" class="nav-link" data-tab="research">Research</a>
@@ -306,8 +306,7 @@
     </section>
 
     <!-- Art/Photography Section -->
-    <section id="art" class="tab-content"></section>
-      
+    <section id="art" class="tab-content">  
       <div class="gallery-section photography-section">
         <h2>Photography</h2>
         <div class="gallery-grid">
@@ -342,7 +341,7 @@
             <img src="images/image14.JPG" alt="Photo 14">
           </div>
         </div>
-              </div>
+      </div>
 
       <div class="gallery-section sketches-section">
         <h2>Sketches</h2>
@@ -369,7 +368,7 @@
             <img src="images/sketch8.png" alt="Sketch 8">
           </div>
         </div>
-              </div>
+      </div>
     </section>
 
   </main>
