--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <!-- Navigation -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="#" class="nav-logo"><img src="images/logo-name.svg" alt="Rishubh Parihar" class="logo-image"></a>
       <div class="nav-links">
         <a href="#" class="nav-link active" data-tab="about">About</a>
         <a href="#" class="nav-link" data-tab="research">Research</a>
@@ -26,12 +25,12 @@
 
   <!-- Main Content -->
   <main class="main-content">
-    
+
     <!-- About Section -->
     <section id="about" class="tab-content active">
       <div class="about-header">
         <div class="about-text">
-          <h1>About</h1>
+          <h1 class="name-heading">Rishubh Parihar</h1>
           <p class="bio">
             I am a final year PhD student at IISc Bangalore, advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a>. I work on developing methods to enhance controllability in vision generative models by designing interfaces beyond text to interact with these models.
           </p>
@@ -39,7 +38,10 @@
             I spent an amazing summer at Snap Research working on controllable image editing. Prior to my Ph.D., I gained industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation.
           </p>
           <p class="bio">
-              I obtained B.Tech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
+              I obtained B.Tech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.
+              </p>
+          <p class="bio" style="font-weight: 600; color: #c96a3a;">
+              [New] I am interested in an industrial full-time research position. Please feel free to connect.
               </p>
           <div class="social-links">
             <a href="mailto:rishubhp@iisc.ac.in">Email</a>
@@ -51,7 +53,8 @@
         </div>
         <div class="about-image">
               <div class="profile-container">
-            <img class="profile-photo" src="images/cover_photo.gif" alt="Rishubh Parihar">
+            <img class="profile-photo profile-photo-static" src="images/dp-n-crop.png" alt="Rishubh Parihar">
+            <img class="profile-photo profile-photo-animated" src="images/cover_photo.gif" alt="Rishubh Parihar">
           </div>
         </div>
               </div>
